changed the auto width feature in techstack container in order to avoid overflow

--- a/styles/general.css
+++ b/styles/general.css
@@ -24,6 +24,7 @@ button {
     font-weight .5s,
     transform 0.3s
   ;
+  cursor: pointer;
 }
 
 
