--- a/styles/techstack.css
+++ b/styles/techstack.css
@@ -5,13 +5,20 @@
 
   border: 2px solid black;
   border-radius: 10px;
-  height: 250px;
+  max-width: 670px;
 
-  max-width: fit-content;
+  height: auto;
+  
+  
   margin-left: auto;
   margin-right: auto;
 
   background-color: white;
+
+}
+
+.upper-techstack-container {
+  border-bottom: 1px solid black;
 }
 
 .upper-techstack-container .title{
@@ -27,15 +34,13 @@
   display: flex;
   justify-content: center;
   align-items: center;
-  height: 100%;
 
-  padding: 10px 15px;
-
+  padding: 30px 0px;
+  
   gap: 20px;
 
-  border-top-style: solid;
-  border-top-width: 1px;
   flex-wrap: wrap;
+
 
 }
 
